add basic initialization logic + first GH request

--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -5,15 +5,17 @@ build-type: Simple
 
 library
   hs-source-dirs: src
-  build-depends: base
+  build-depends: aeson
+               , base
                , common
-               , obelisk-frontend
-               , obelisk-route
                , jsaddle
-               , reflex-dom-core
-               , obelisk-executable-config-lookup
-               , obelisk-generated-static
                , lens
+               , lens-aeson
+               , obelisk-executable-config-lookup
+               , obelisk-frontend
+               , obelisk-generated-static
+               , obelisk-route
+               , reflex-dom-core
                , text
   exposed-modules:
     Frontend
