--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -19,6 +19,8 @@ library
                , text
   exposed-modules:
     Frontend
+    Home
+    Tree
   ghc-options: -Wall -O -fno-show-valid-hole-fits
                -- unsafe code
                -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
