--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -1,43 +1,87 @@
+cabal-version: 2.4
 name: backend
 version: 0.1
-cabal-version: >= 1.8
 build-type: Simple
 
+common defaults
+  default-language: Haskell2010
+  ghc-options:
+    -Wall
+    -O
+    -fno-show-valid-hole-fits
+    -- unsafe code
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
+    -Wpartial-fields
+    -- unneeded code
+    -Widentities
+    -Wredundant-constraints
+  if impl(ghc >= 8.8)
+    ghc-options: -Wmissing-deriving-strategies
+  default-extensions:
+    AutoDeriveTypeable
+    BangPatterns
+    BinaryLiterals
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveDataTypeable
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveTraversable
+    DoAndIfThenElse
+    EmptyDataDecls
+    ExistentialQuantification
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    GeneralizedNewtypeDeriving
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MonadFailDesugaring
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PartialTypeSignatures
+    PatternGuards
+    PolyKinds
+    RankNTypes
+    RecordWildCards
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeFamilies
+    TypeSynonymInstances
+    ViewPatterns
+
 library
+  import: defaults
   hs-source-dirs: src
   if impl(ghcjs)
     buildable: False
-  build-depends: base
-               , common
-               , frontend
-               , obelisk-backend
-               , obelisk-route
+  build-depends:
+    base,
+    common,
+    frontend,
+    obelisk-backend,
+    obelisk-route,
   exposed-modules:
     Backend
-  ghc-options: -Wall -O -fno-show-valid-hole-fits
-               -- unsafe code
-               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
-               -- unneeded code
-               -Widentities -Wredundant-constraints
-  if impl(ghc >= 8.8)
-    ghc-options:
-               -Wmissing-deriving-strategies
 
 executable backend
+  import: defaults
   main-is: main.hs
   hs-source-dirs: src-bin
-  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
-               -- unsafe code
-               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
-               -- unneeded code
-               -Widentities -Wredundant-constraints
-  if impl(ghc >= 8.8)
-    ghc-options:
-               -Wmissing-deriving-strategies
+  build-depends:
+    backend,
+    base,
+    common,
+    frontend,
+    obelisk-backend,
+  ghc-options: -threaded
   if impl(ghcjs)
     buildable: False
-  build-depends: base
-               , backend
-               , common
-               , frontend
-               , obelisk-backend
