--- a/common/common.cabal
+++ b/common/common.cabal
@@ -1,24 +1,73 @@
+cabal-version: 2.4
 name: common
 version: 0.1
-cabal-version: >= 1.2
 build-type: Simple
 
+common defaults
+  default-language: Haskell2010
+  ghc-options:
+    -Wall
+    -O
+    -fno-show-valid-hole-fits
+    -- unsafe code
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
+    -Wpartial-fields
+    -- unneeded code
+    -Widentities
+    -Wredundant-constraints
+  if impl(ghc >= 8.8)
+    ghc-options: -Wmissing-deriving-strategies
+  default-extensions:
+    AutoDeriveTypeable
+    BangPatterns
+    BinaryLiterals
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveDataTypeable
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveTraversable
+    DoAndIfThenElse
+    EmptyDataDecls
+    ExistentialQuantification
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    GeneralizedNewtypeDeriving
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MonadFailDesugaring
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PartialTypeSignatures
+    PatternGuards
+    PolyKinds
+    RankNTypes
+    RecordWildCards
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeFamilies
+    TypeSynonymInstances
+    ViewPatterns
+
 library
+  import: defaults
   hs-source-dirs: src
-  build-depends: base
-               , lens
-               , mtl
-               , obelisk-route
-               , text
+  build-depends:
+    base,
+    lens,
+    mtl,
+    obelisk-route,
+    text,
   exposed-modules:
     Common.Api
     Common.Model
     Common.Route
-  ghc-options: -Wall -O -fno-show-valid-hole-fits
-               -- unsafe code
-               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
-               -- unneeded code
-               -Widentities -Wredundant-constraints
-  if impl(ghc >= 8.8)
-    ghc-options:
-               -Wmissing-deriving-strategies
