add @tailwindcss/typography plugin
This will be used to render the raw HTML out of the markdown parsing.

--- a/static/src/package.json
+++ b/static/src/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "author": "Jean-Charles Quillet",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.15",
     "cssnano": "^6.0.1",
     "postcss": "^8.4.29",
