--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -88,16 +88,17 @@ library
   exposed-modules:
     Frontend
   other-modules:
-    About
-    Browse
-    Configuration
     JSDOM.Storage.Extra
     LocalStorage
-    Navbar
+    Page.About
+    Page.Browse
+    Page.Settings
+    Page.Search
     Reflex.Extra
     Request
-    Search
-    Widgets
+    Widget
+    Widget.Icon
+    Widget.Navbar
 
 executable frontend
   import: defaults
