--- a/static/src/package.json
+++ b/static/src/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^10.4.15",
     "cssnano": "^6.0.1",
     "postcss": "^8.4.29",
+    "daisyui": "^2.52.0",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.3"
