--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-.attr-cache
-.cabal-sandbox
 *.hi
 *.o
+.attr-cache
+.cabal-sandbox
+TAGS
+cabal-ghcjs.project
 cabal.project.local
 cabal.sandbox.config
 ctags
+dist-ghcjs/
 dist-newstyle/
 dist/
+diverk.keystore
+errors.err
 ghcid-output.txt
 profile/
 result
 result-*
-tags
-TAGS
 static.out
+tags
